--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/roboto-slab": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/firestore": "^21.10.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
